# backuprs

./: .gitignore  Cargo.toml  README.md  backup.service  config.toml.example  temp.json
src/: config.rs  error.rs  job.rs  main.rs  models.rs
