[package]
name = "backuprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
clap = {version = "4.1", features = ["derive"]}
miette = {version = "5.5.0", features = ["fancy"]}
# serde_with = "2.2.0"
serde_json = "1"
thiserror = "1"
time = { version = "0.3.20", features = ["serde-well-known","local-offset","std", "parsing"] }
temp-dir = "0.1.11"

[profile.release]
lto = "thin"